# url-shortener

./: .gitignore  Dockerfile  Makefile  README.md  bumpversion.cfg  db.sqlite3  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: django-tests.yaml
shortener/: __init__.py  settings.py  urls.py
urlshortener/: tests.py  urls.py  views.py
