[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = ["hkorzeniewski <56238495+hkorzeniewski@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "url_shortener"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
djangorestframework = "^3.14.0"
pyshorteners = "^1.0.1"
django-redis = "^5.2.0"
pymemcache = "^4.0.0"
django-environ = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
