[tool.poetry]
name = "url-shortener"
version = "0.2.0"
description = ""
authors = ["hkorzeniewski <56238495+hkorzeniewski@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "url_shortener"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
djangorestframework = "^3.14.0"
pyshorteners = "^1.0.1"
django-redis = "^5.2.0"
django-environ = "^0.9.0"
django-fakeredis = "^0.1.2"
bumpversion = "^0.6.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.1.0"
pycodestyle = "^2.10.0"
black = "^22.12.0"
bandit = "^1.7.4"
isort = "^5.12.0"
shed = "^0.10.8"
autoflake = "^2.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
